--- a/QAuthorApp/Base.lproj/Main.storyboard
+++ b/QAuthorApp/Base.lproj/Main.storyboard
@@ -133,15 +133,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" placeholder="Filter title,genre" translatesAutoresizingMaskIntoConstraints="NO" id="ijL-Gq-4yw">
+                            <searchBar contentMode="redraw" misplaced="YES" placeholder="Filter title,genre" translatesAutoresizingMaskIntoConstraints="NO" id="ijL-Gq-4yw">
                                 <rect key="frame" x="5" y="28" width="359" height="44"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="359" id="Xb5-rn-o48"/>
+                                    <constraint firstAttribute="height" constant="44" id="2CN-Da-Qll"/>
                                 </constraints>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Search by age" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vee-ru-mCa">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Search by age" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vee-ru-mCa">
                                 <rect key="frame" x="368" y="28" width="227" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="SId-0T-pQu"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
@@ -159,7 +162,7 @@
                                 </connections>
                             </segmentedControl>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="164" sectionHeaderHeight="2" sectionFooterHeight="2" translatesAutoresizingMaskIntoConstraints="NO" id="a8Z-zg-Lcz">
-                                <rect key="frame" x="5" y="118" width="590" height="477"/>
+                                <rect key="frame" x="5" y="118" width="590" height="374"/>
                                 <color key="backgroundColor" red="0.84241253400000005" green="0.84241253400000005" blue="0.84241253400000005" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="BookListTableViewCell" rowHeight="164" id="Zxc-Jt-MtR" customClass="BookListTableViewCell">
@@ -364,25 +367,40 @@
                                     <outlet property="delegate" destination="mYB-O6-hxZ" id="HGh-Qg-AXB"/>
                                 </connections>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pby-WQ-QAw" customClass="GADBannerView">
+                                <rect key="frame" x="5" y="500" width="590" height="92"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="92" id="TFN-6h-DaY"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="adUnitID" value="ca-app-pub-5468147316620707/4430610672"/>
+                                </userDefinedRuntimeAttributes>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="pKw-Mn-f5c" firstAttribute="leading" secondItem="ijL-Gq-4yw" secondAttribute="leading" id="6TS-tm-xUI"/>
-                            <constraint firstItem="ijL-Gq-4yw" firstAttribute="top" secondItem="F56-RK-t6E" secondAttribute="bottom" constant="8" id="BfU-19-6tq"/>
+                            <constraint firstItem="pKw-Mn-f5c" firstAttribute="top" secondItem="ijL-Gq-4yw" secondAttribute="bottom" constant="10" id="1oD-dh-ubi"/>
+                            <constraint firstItem="ijL-Gq-4yw" firstAttribute="leading" secondItem="76E-6T-Nf8" secondAttribute="leadingMargin" constant="-11" id="2tc-H9-9pu"/>
                             <constraint firstItem="pKw-Mn-f5c" firstAttribute="leading" secondItem="a8Z-zg-Lcz" secondAttribute="leading" id="Dlc-oC-Pjc"/>
-                            <constraint firstItem="ijL-Gq-4yw" firstAttribute="bottom" secondItem="vee-ru-mCa" secondAttribute="bottom" id="Fts-uR-HLT"/>
+                            <constraint firstItem="ijL-Gq-4yw" firstAttribute="top" secondItem="F56-RK-t6E" secondAttribute="bottom" constant="8" id="IoH-5W-oUw"/>
                             <constraint firstAttribute="trailingMargin" secondItem="a8Z-zg-Lcz" secondAttribute="trailing" constant="-11" id="Ko5-eK-kE5"/>
+                            <constraint firstItem="vee-ru-mCa" firstAttribute="top" secondItem="F56-RK-t6E" secondAttribute="bottom" constant="8" id="NPz-ed-y68"/>
+                            <constraint firstItem="vee-ru-mCa" firstAttribute="leading" secondItem="ijL-Gq-4yw" secondAttribute="trailing" constant="4" id="PZc-iE-SPC"/>
+                            <constraint firstItem="Pby-WQ-QAw" firstAttribute="top" secondItem="76E-6T-Nf8" secondAttribute="top" constant="500" id="Sd8-ZK-Cap"/>
                             <constraint firstItem="a8Z-zg-Lcz" firstAttribute="top" secondItem="pKw-Mn-f5c" secondAttribute="bottom" constant="8" symbolic="YES" id="WbZ-pn-t7b"/>
-                            <constraint firstItem="ijL-Gq-4yw" firstAttribute="top" secondItem="vee-ru-mCa" secondAttribute="top" id="WjM-T7-OPO"/>
                             <constraint firstItem="a8Z-zg-Lcz" firstAttribute="leading" secondItem="76E-6T-Nf8" secondAttribute="leadingMargin" constant="-11" id="dxg-DQ-MaF"/>
-                            <constraint firstItem="pKw-Mn-f5c" firstAttribute="top" secondItem="ijL-Gq-4yw" secondAttribute="bottom" constant="10" id="iYI-gL-ZrF"/>
-                            <constraint firstItem="vee-ru-mCa" firstAttribute="leading" secondItem="ijL-Gq-4yw" secondAttribute="trailing" constant="4" id="l4T-ei-seF"/>
-                            <constraint firstItem="3H1-gp-RGz" firstAttribute="top" secondItem="a8Z-zg-Lcz" secondAttribute="bottom" constant="5" id="muV-vD-OwO"/>
+                            <constraint firstItem="Pby-WQ-QAw" firstAttribute="top" secondItem="a8Z-zg-Lcz" secondAttribute="bottom" constant="8" id="h9i-cH-jzL"/>
+                            <constraint firstItem="Pby-WQ-QAw" firstAttribute="trailing" secondItem="a8Z-zg-Lcz" secondAttribute="trailing" id="lrv-Lk-ApT"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="vee-ru-mCa" secondAttribute="trailing" constant="-11" id="mJg-8D-zF3"/>
+                            <constraint firstItem="Pby-WQ-QAw" firstAttribute="leading" secondItem="a8Z-zg-Lcz" secondAttribute="leading" id="ouy-SG-cM0"/>
+                            <constraint firstItem="3H1-gp-RGz" firstAttribute="top" secondItem="Pby-WQ-QAw" secondAttribute="bottom" constant="8" id="yVO-cb-LhT"/>
                             <constraint firstItem="vee-ru-mCa" firstAttribute="trailing" secondItem="a8Z-zg-Lcz" secondAttribute="trailing" id="zFu-Od-xJH"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="ageRangeTextField" destination="vee-ru-mCa" id="nu0-bg-aVm"/>
+                        <outlet property="bannerView" destination="Pby-WQ-QAw" id="icb-bq-pPq"/>
                         <outlet property="bookListTableView" destination="a8Z-zg-Lcz" id="3kD-hQ-mZd"/>
                         <outlet property="bookSegments" destination="pKw-Mn-f5c" id="eZE-os-gNf"/>
                         <outlet property="searchBar1" destination="ijL-Gq-4yw" id="dWE-ab-nVQ"/>
@@ -877,7 +895,7 @@
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HFu-uW-7Ko">
-                                <rect key="frame" x="38" y="539" width="83" height="41"/>
+                                <rect key="frame" x="259" y="539" width="83" height="41"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <state key="normal" title="Save">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -898,6 +916,18 @@
                                     <action selector="onNextPageClicked:" destination="ogV-NH-Wqb" eventType="touchUpInside" id="id1-nM-WZd"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dwy-7h-ITv">
+                                <rect key="frame" x="31" y="527" width="43" height="53"/>
+                                <state key="normal" image="recordvoice.png">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Record Audio" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TXR-fv-QiS">
+                                <rect key="frame" x="82" y="551" width="98" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
