--- a/QAuthorApp/Base.lproj/Main.storyboard
+++ b/QAuthorApp/Base.lproj/Main.storyboard
@@ -344,6 +344,7 @@
                                                 </mask>
                                             </variation>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <connections>
                                             <outlet property="ageRangeLbl" destination="3hB-CO-Zca" id="NEw-cS-b5T"/>
                                             <outlet property="bokkNameLbl" destination="uOG-rE-BN0" id="4eg-sh-Ctt"/>
@@ -802,7 +803,7 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="250-iG-T5Z">
                                 <rect key="frame" x="130" y="38" width="341" height="372"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="341" id="26s-yl-aVj"/>
                                 </constraints>
@@ -883,7 +884,7 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.44705882352941173" green="0.77254901960784317" blue="0.83529411764705885" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HFu-uW-7Ko">
                                 <rect key="frame" x="259" y="539" width="83" height="41"/>
@@ -1743,7 +1744,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pO5-eg-mDR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="875" y="-806"/>
+            <point key="canvasLocation" x="875" y="-817"/>
         </scene>
     </scenes>
     <resources>
