--- a/QAuthorApp/Base.lproj/Main.storyboard
+++ b/QAuthorApp/Base.lproj/Main.storyboard
@@ -862,20 +862,23 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zab-dE-Tna">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zab-dE-Tna">
                                 <rect key="frame" x="16" y="20" width="568" height="499"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="BookCover.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="zvH-SU-j32">
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BookCover.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="zvH-SU-j32">
                                         <rect key="frame" x="162" y="15" width="244" height="220"/>
                                     </imageView>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="Story" translatesAutoresizingMaskIntoConstraints="NO" id="eg6-F9-0zC">
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Story" translatesAutoresizingMaskIntoConstraints="NO" id="eg6-F9-0zC">
                                         <rect key="frame" x="8" y="252" width="552" height="239"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="30i-AE-kcy">
-                                        <rect key="frame" x="162" y="17" width="244" height="220"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="30i-AE-kcy">
+                                        <rect key="frame" x="162" y="15" width="244" height="220"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="244" id="1yt-uX-rFd"/>
+                                        </constraints>
                                         <state key="normal">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -885,20 +888,22 @@
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.44705882352941173" green="0.77254901960784317" blue="0.83529411764705885" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="30i-AE-kcy" firstAttribute="bottom" secondItem="zvH-SU-j32" secondAttribute="bottom" id="6Mw-Bs-MVa"/>
+                                    <constraint firstAttribute="centerX" secondItem="eg6-F9-0zC" secondAttribute="centerX" id="9fg-WS-E1q"/>
+                                    <constraint firstItem="eg6-F9-0zC" firstAttribute="leading" secondItem="zab-dE-Tna" secondAttribute="leading" constant="8" id="Epc-EJ-lgN"/>
+                                    <constraint firstItem="eg6-F9-0zC" firstAttribute="top" secondItem="30i-AE-kcy" secondAttribute="bottom" constant="17" id="VsR-xi-34G"/>
+                                    <constraint firstItem="30i-AE-kcy" firstAttribute="top" secondItem="zvH-SU-j32" secondAttribute="top" id="aFc-uf-frY"/>
+                                    <constraint firstItem="zvH-SU-j32" firstAttribute="top" secondItem="zab-dE-Tna" secondAttribute="top" constant="15" id="ace-rA-WcV"/>
+                                    <constraint firstAttribute="bottom" secondItem="zvH-SU-j32" secondAttribute="bottom" constant="264" id="ck5-4X-pEy"/>
+                                    <constraint firstItem="30i-AE-kcy" firstAttribute="leading" secondItem="zvH-SU-j32" secondAttribute="leading" id="e25-hf-bEb"/>
+                                    <constraint firstAttribute="bottom" secondItem="eg6-F9-0zC" secondAttribute="bottom" constant="8" id="n0k-5l-0QL"/>
+                                    <constraint firstItem="30i-AE-kcy" firstAttribute="trailing" secondItem="zvH-SU-j32" secondAttribute="trailing" id="r0a-CF-pRF"/>
+                                    <constraint firstAttribute="centerX" secondItem="zvH-SU-j32" secondAttribute="centerX" id="w9s-HV-ZIM"/>
+                                </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HFu-uW-7Ko">
-                                <rect key="frame" x="259" y="539" width="83" height="41"/>
-                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                                <state key="normal" title="Save">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="onSaveButtonClicked:" destination="ogV-NH-Wqb" eventType="touchUpInside" id="kaw-AZ-jQ7"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8yK-1d-jdc">
-                                <rect key="frame" x="449" y="539" width="106" height="41"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8yK-1d-jdc">
+                                <rect key="frame" x="478" y="539" width="106" height="41"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <state key="normal" title="Next Page">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -908,20 +913,61 @@
                                     <action selector="onNextPageClicked:" destination="ogV-NH-Wqb" eventType="touchUpInside" id="id1-nM-WZd"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dwy-7h-ITv">
-                                <rect key="frame" x="31" y="527" width="43" height="53"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dwy-7h-ITv">
+                                <rect key="frame" x="16" y="527" width="46" height="42"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="46" id="Jar-z8-uZI"/>
+                                    <constraint firstAttribute="height" constant="42" id="KDP-08-COf"/>
+                                </constraints>
                                 <state key="normal" image="recordvoice.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Record Audio" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TXR-fv-QiS">
-                                <rect key="frame" x="82" y="551" width="98" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Record Audio" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TXR-fv-QiS">
+                                <rect key="frame" x="16" y="571" width="75" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="75" id="Qkg-d4-yCY"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HFu-uW-7Ko">
+                                <rect key="frame" x="259" y="539" width="83" height="41"/>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="83" id="JfQ-uU-3XK"/>
+                                </constraints>
+                                <state key="normal" title="Save">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="onSaveButtonClicked:" destination="ogV-NH-Wqb" eventType="touchUpInside" id="kaw-AZ-jQ7"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Vib-im-c7n" firstAttribute="top" secondItem="8yK-1d-jdc" secondAttribute="bottom" constant="20" id="39D-uI-7Rw"/>
+                            <constraint firstItem="Vib-im-c7n" firstAttribute="top" secondItem="HFu-uW-7Ko" secondAttribute="bottom" constant="20" id="4Iv-3a-AMb"/>
+                            <constraint firstItem="Vib-im-c7n" firstAttribute="top" secondItem="Dwy-7h-ITv" secondAttribute="bottom" constant="31" id="6Fa-Hm-akz"/>
+                            <constraint firstAttribute="centerX" secondItem="zab-dE-Tna" secondAttribute="centerX" id="7Pq-bT-Jsk"/>
+                            <constraint firstItem="zab-dE-Tna" firstAttribute="top" secondItem="cXd-WX-W4q" secondAttribute="bottom" id="CzJ-qm-rZN"/>
+                            <constraint firstItem="8yK-1d-jdc" firstAttribute="leading" secondItem="zab-dE-Tna" secondAttribute="trailing" constant="-106" id="DkI-TE-YV7"/>
+                            <constraint firstItem="zab-dE-Tna" firstAttribute="leading" secondItem="Dwy-7h-ITv" secondAttribute="trailing" constant="-46" id="Hkn-rX-GBq"/>
+                            <constraint firstItem="Vib-im-c7n" firstAttribute="top" secondItem="TXR-fv-QiS" secondAttribute="bottom" constant="8" symbolic="YES" id="Lba-qM-68d"/>
+                            <constraint firstItem="Vib-im-c7n" firstAttribute="top" secondItem="zab-dE-Tna" secondAttribute="bottom" constant="81" id="Uky-ws-ln7"/>
+                            <constraint firstItem="TXR-fv-QiS" firstAttribute="top" secondItem="Dwy-7h-ITv" secondAttribute="bottom" constant="2" id="VJt-iX-Seu"/>
+                            <constraint firstItem="HFu-uW-7Ko" firstAttribute="top" secondItem="zab-dE-Tna" secondAttribute="bottom" constant="20" id="gdc-67-Rqp"/>
+                            <constraint firstAttribute="centerX" secondItem="HFu-uW-7Ko" secondAttribute="centerX" constant="-0.5" id="iep-7a-gCO"/>
+                            <constraint firstItem="zab-dE-Tna" firstAttribute="trailing" secondItem="502-Nr-pms" secondAttribute="trailingMargin" id="lwq-jk-5fe"/>
+                            <constraint firstItem="Dwy-7h-ITv" firstAttribute="top" secondItem="zab-dE-Tna" secondAttribute="bottom" constant="8" id="pL3-E4-khC"/>
+                            <constraint firstItem="8yK-1d-jdc" firstAttribute="top" secondItem="zab-dE-Tna" secondAttribute="bottom" constant="20" id="qMS-6h-dxF"/>
+                            <constraint firstItem="zab-dE-Tna" firstAttribute="leading" secondItem="502-Nr-pms" secondAttribute="leadingMargin" id="w39-Xo-GJi"/>
+                            <constraint firstItem="TXR-fv-QiS" firstAttribute="leading" secondItem="Dwy-7h-ITv" secondAttribute="leading" id="xok-34-dDj"/>
+                            <constraint firstItem="8yK-1d-jdc" firstAttribute="trailing" secondItem="502-Nr-pms" secondAttribute="trailingMargin" id="xxA-9R-Lbb"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="imageView1" destination="zvH-SU-j32" id="790-Sz-t4K"/>
